sdk/6000/Wrapper/ps6000Wrap/ps6000Wrap.h


extern int16_t __declspec(dllexport) __stdcall RunBlock
(
	int16_t handle, 
	uint32_t preTriggerSamples, 
	uint32_t postTriggerSamples, 
    uint32_t timebase, 
	int16_t oversample, 
	uint32_t segmentIndex
);


extern PICO_STATUS __declspec(dllexport) __stdcall GetStreamingLatestValues
(
	int16_t handle
);


extern PICO_STATUS __declspec(dllexport) __stdcall SetPulseWidthQualifier
(
	int16_t handle,
	int32_t *pwqConditionsArray,
	int16_t nConditions,
	int32_t direction,
	uint32_t lower,
	uint32_t upper,
	int32_t type
);